--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distance-transform",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Distance transforms for ndarrays",
   "main": "dt.js",
   "directories": {
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "bisect": "~0.0.0",
-    "cwise": "~0.1.2",
-    "ndarray": "~0.2.3",
-    "ndarray-ops": "~0.1.3",
+    "cwise": "~0.3.2",
+    "ndarray": "~1.0.0",
+    "ndarray-ops": "~1.1.0",
     "typedarray-pool": "~0.1.1"
   },
   "devDependencies": {
     "almost-equal": "~0.0.0",
-    "save-pixels": "~0.1.0",
-    "tap": "~0.4.3"
+    "tap": "~0.4.3",
+    "save-pixels": "~0.2.0",
+    "zeros": "0.0.0"
   },
   "scripts": {
     "test": "tap test/*.js"
